# Picking-3

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  fly.toml  main.py  nginx.conf
backend/: .env.example  Dockerfile  fly.toml  init.sql  init_admin.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AdminPanel.tsx  CameraScanner.tsx  Dashboard.tsx  ExceptionManagement.tsx  Header.tsx  Login.tsx  OfflineIndicator.tsx  OrderDetail.tsx  OrderList.tsx  OrderManagement.tsx  PhotoGallery.tsx  PickingSession.tsx  ProductLineItem.tsx  QRLabel.tsx  StoreConfig.tsx  UserLogin.tsx  WarehouseManagement.tsx
frontend/src/contexts/: AlertContext.tsx  AuthContext.tsx
frontend/src/utils/: deviceLock.ts  offlineStorage.ts
wordpress-plugin/picking-connector/: picking-connector.php
wordpress-plugin/picking-connector/admin/css/: admin.css
wordpress-plugin/picking-connector/admin/js/: admin.js
wordpress-plugin/picking-connector/admin/partials/: connection-page.php  settings-page.php  users-page.php
wordpress-plugin/picking-connector/includes/: class-picking-admin.php  class-picking-api.php  class-picking-loader.php
