[tool.poetry]
name = "picking-system-backend"
version = "0.1.0"
description = "WooCommerce Picking System Backend API"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
boto3 = "^1.34.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fastapi run main.py --host 0.0.0.0 --port 8000"
